# ScaleAI

./: .gitignore  CMakeLists.txt  README.md  main.cu  performance.ipynb
base/: CMakeLists.txt  job-base  main.cpp
gpu_naive/: main.cu
